# ranger-lite

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rangerlite/: __init__.py  rangerlite.py
test/: rangerlite_test.py
